<resources>
    <string name="app_name" translatable="false">German Verbs FREE</string>
    <string name="title_without_free" translatable="false">German Verbs</string>
    <string name="action_language">Language</string>
    <string name="chooseLanguageTitle">Choose language</string>
    <string name="flag_image_description">Flag</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="game_true">True</string>
    <string name="game_false">False</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="practice">Practice</string>
    <string name="verbs">Verbs</string>
    <string name="settings">Settings</string>
    <string name="help_btn">Info</string>
    <string name="info_cards">Make a verb, by selecting one of the offered answers.</string>
    <string name="info_true_or_false">Speed competition. Is this verb correct? Check it as fast as possible.</string>
    <string name="info_fill_the_gaps">You see the verb, but one place is empty. Just fill this gap.</string>
    <string name="info_type_word">Type full verb conjugations.</string>
    <string name="hint_letters">Hint: to type letters Ä-Ö-Ü-ß make long tap on A-O-U-S (Use english keyboard)</string>

    <string name="true_or_false">True or false</string>
    <string name="cards">Cards</string>
    <string name="fill_the_gaps">Fill the gaps</string>
    <string name="type_words">Type words</string>

    <string name="result_activity_name">Results</string>
    <string name="result_perfect">Perfect</string>
    <string name="result_very_good">Excellent</string>
    <string name="result_good">Good</string>
    <string name="result_not_good">Average</string>
    <string name="result_bad">Poor</string>
    <string name="result_very_bad">Bad</string>
    <string name="result_awful">Awful</string>

    <string name="not_enought_verb_message">Not enough verbs. Make more verbs active or reduce number of verbs to learn</string>
    <string name="true_answer_cnt">Right answers: %d</string>
    <string name="false_answer_cnt">Mistakes: %d</string>
    <string name="result_percent">Accuracy: %d </string>
    <string name="true_false_start">Start</string>
    <string name="true_false_score">Score: %d</string>
    <string name="true_false_multiple">Multiple: %d</string>
    <string name="true_false_your_score">Your score: %d</string>
    <string name="true_false_record">Top score: %d</string>
    <string name="type_word_hint">Type here</string>
    <string name="type_word_button_dsc">check answer</string>

    <string name="hint_presens">Enter verb in präsens</string>
    <string name="hint_prateritum">Enter verb in präteritum</string>
    <string name="hint_perfect">Enter verb in perfect</string>

    <!--Preferences-->
    <string name="select_number_of_words_in_card_game_key" translatable="false">cards_game_word_count</string>
    <string name="select_number_of_words_in_fill_gaps_game_key" translatable="false">type_word_game_word_count</string>
    <string name="select_number_of_words_in_type_word_game_key" translatable="false">full_type_word_game_word_count</string>
    <string name="clear_progress">Reset your progress</string>
    <string name="clear_progress_key" translatable="false">clear_progress</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_language_key" translatable="false">choose_language_key</string>
    <string name="reset">Reset progress</string>
    <string name="reset_apply_message">Reset progress of all words?</string>
    <string name="number_picker_dialog_cards_game">Amount of words in Cards</string>
    <string name="number_picker_dialog_fill_the_gaps_game">Amount of words in Fill the Gaps</string>
    <string name="number_picker_dialog_type_the_word_game">Amount of words in Type words</string>
    <string name="words_in_exercise">Words in exercises</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="main_settings">Main settings</string>
    <string name="language_description">Choose language</string>
    <string name="reset_description">Progress reset</string>

    <!--Ad-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6613679663152298/7853004768</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-6613679663152298/1946071967</string>
    <string name="testDeviceId" translatable="false">A0B61B5C4995EF9108E6ABAB35D6FE5B</string>
</resources>
