<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ru.polis.germanverbs.games.CardsGameActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorTextOrIcons"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/toolbar_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/resultTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp" />

        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:id="@+id/resultProgressBar"
            android:layout_below="@+id/resultTextView"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            app:rcMax="100"
            app:rcSecondaryProgress="100"
            app:rcRadius="5dp"
            app:rcProgressColor="@color/colorTrueAnswer"
            app:rcSecondaryProgressColor="@color/colorFalseAnswer"
            app:rcBackgroundColor="@color/colorDivider"
            app:rcBackgroundPadding="2dp">
        </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultPercentAnswerTextView"
            android:layout_below="@+id/resultProgressBar"
            android:layout_marginTop="32dp"
            android:text="@string/result_percent"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rightAnswerTextView"
            android:layout_below="@+id/resultPercentAnswerTextView"
            android:layout_marginTop="8dp"
            android:text="@string/true_answer_cnt"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/falseAnswerTextView"
            android:layout_below="@+id/rightAnswerTextView"
            android:layout_marginTop="8dp"
            android:text="@string/false_answer_cnt"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/result_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onFabClick"/>

    </RelativeLayout>

</LinearLayout>