<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ru.polis.germanverbs_free.games.TrueFalseGameActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorTextOrIcons"
        app:subtitleTextColor="@color/colorTextOrIcons"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/toolbar_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear_layout_true_false">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp">
            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/record_progress_bar"
                app:rcRadius="3dp"
                app:rcProgressColor="@color/colorTrueAnswer"
                app:rcSecondaryProgressColor="@color/white"
                app:rcBackgroundColor="@color/colorDivider"
                app:rcBackgroundPadding="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRecord"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="14dp"/>
        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/gameTrueFalseMnozitelView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/true_false_text_size"
                    android:textIsSelectable="false"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/true_false_inner_padding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/gameTrueFalseScoreView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/true_false_text_size"
                    android:padding="@dimen/true_false_inner_padding"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/trueFalseLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chronometer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:textSize="@dimen/settings_txt_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/true_false_answer_size"
                    android:id="@+id/gameTrueFalseAnswerView"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center">
                </TextView>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/adView"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/true_false_btn_size"
                android:id="@+id/btnNegativeTrueFalseGame"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/true_false_no"
                android:clickable="true"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/game_false"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    android:textSize="@dimen/true_false_btn_text_size"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/true_false_btn_size"
                android:id="@+id/btnPositiveTrueFalseGame"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/true_false_yes"
                android:clickable="true"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/game_true"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/true_false_btn_text_size"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>
            </LinearLayout>

    </LinearLayout>

</LinearLayout>